services/arr/qbittorrent/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector: {}
  template:
    spec:
      enableServiceLinks: false
      serviceAccountName: default
      automountServiceAccountToken: false
      containers:
        - name: qbittorrent
          image: qbittorrent
          ports:
            - name: webui
              protocol: TCP
              containerPort: 8080
          volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /downloads
            name: downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads
        - name: gluetun-config
          configMap:
            name: qbittorrent-gluetun-config
