services/arr/qbittorrent/resources/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: qbittorrent-access
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: qbittorrent
      app.kubernetes.io/name: qbittorrent
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Requests from ingress controller
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx-intranet
          podSelector:
            matchLabels:
              app.kubernetes.io/part-of: ingress-nginx
              app.kubernetes.io/name: ingress-nginx
              app.kubernetes.io/instance: ingress-nginx-intranet
              app.kubernetes.io/component: controller

    # Requests from -arr services which use qBittorrent
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: radarr
              app.kubernetes.io/name: radarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: sonarr
              app.kubernetes.io/name: sonarr
      ports:
        - protocol: TCP
          port: webui
  
  egress:
    # Responses to -arr services which use qBittorrent
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: radarr
              app.kubernetes.io/name: radarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: sonarr
              app.kubernetes.io/name: sonarr
      ports:
        - protocol: TCP
          port: webui

    # ProtonVPN US Chicago servers
    # curl https://raw.githubusercontent.com/qdm12/gluetun/v3.40.0/internal/storage/servers.json | yq --yaml-output '.protonvpn.servers | map(select(.country == "United States" and .city == "Chicago" and .vpn == "wireguard" and .port_forward).ips[]) | sort | map({ipBlock: {cidr: (. + "/32")}}) | [{to: .}]'
    - to:
        - ipBlock:
            cidr: 154.47.25.129/32
        - ipBlock:
            cidr: 154.47.25.145/32
        - ipBlock:
            cidr: 154.47.25.161/32
        - ipBlock:
            cidr: 154.47.25.193/32
        - ipBlock:
            cidr: 87.249.134.138/32
        - ipBlock:
            cidr: 87.249.134.139/32
        - ipBlock:
            cidr: 89.187.180.14/32
        - ipBlock:
            cidr: 89.187.180.27/32
        - ipBlock:
            cidr: 89.187.180.40/32
